Métodos de Ordenamiento -Busqueda Secuencial (19 de MArzo 2021)

--- a/src/es/.classpath
+++ b/src/es/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="DanielGil_Flujo"/>
+	<classpathentry kind="src" path="Daniel_Gil_Ejercicios_POO_III"/>
+	<classpathentry kind="src" path="Daniel_Gil_Ejercicios_Condicionales"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
